erneut an java 8 ausgerichtet, EfiInfo mit main erweitert